# openHiTLS

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING-zh.md  README-en.md  README-zh.md  README.md  SECURITY.md  SECURITY_zh.md  configure.py  crypt_eal_hpke.h  hpke.c  sm4  sm4.c  多线程优化.c
auth/: CMakeLists.txt
auth/otp/include/: otp.h
auth/otp/src/: otp.c  otp_util.c  otp_wrapper.c
auth/pake/: pake.c
auth/privpass_token/include/: privpass_token.h
auth/privpass_token/inlcude/: privpass_token.h
auth/privpass_token/src/: privpass_token.c  privpass_token_util.c  privpass_token_wrapper.c
auth/totp/include/: auth_totp.h
auth/totp/src/: auth_totp.c
bsl/version/: CMakeLists.txt
bsl/version/src/: version.c
crypto/bn/: CMakeLists.txt
crypto/bn/include/: crypt_bn.h
crypto/bn/src/: armv8_bn_bincal.c  asm_bn_mont.c  bn_barrett.c  bn_basic.c  bn_basic.h  bn_bincal.h  bn_bincal_armv8.h  bn_bincal_noasm.h  bn_bincal_x8664.h  bn_const.c  bn_gcd.c  bn_lcm.c  bn_mont.c  bn_montbin.h  bn_nistmod.c  bn_operation.c  bn_optimizer.c  bn_optimizer.h  bn_originalroot.c  bn_prime.c  bn_rand.c  bn_sqrt.c  bn_ucal.h  bn_utils.c  x8664_bn_bincal.c
crypto/eal/: CMakeLists.txt
crypto/eal/include/: eal_pkey.h
crypto/eal/src/: eal_cipher.c  eal_cipher_local.h  eal_cipher_method.c  eal_common.c  eal_common.h  eal_drbg_local.h  eal_entropy.c  eal_entropy.h  eal_entropyPool.c  eal_entropy_ecf.c  eal_kdf.c  eal_kdf_local.h  eal_kdf_method.c  eal_keymgmt_util.c  eal_mac.c  eal_mac_local.h  eal_mac_method.c  eal_md.c  eal_md_local.h  eal_md_method.c  eal_pkey_computesharekey.c  eal_pkey_crypt.c  eal_pkey_gen.c  eal_pkey_kem.c  eal_pkey_local.h  eal_pkey_method.c  eal_pkey_para_mem.c  eal_pkey_params.c  eal_pkey_sign.c  eal_rand.c  eal_rand_local.h  eal_rand_method.c
crypto/ealinit/: CMakeLists.txt
crypto/ealinit/include/: crypt_ealinit.h
crypto/ealinit/src/: asmcap_alg_asm.c  asmcap_local.h  cpucap.c  crypt_arm.h  crypt_asmcap.c  crypt_init.c
crypto/hbs/common/: CMakeLists.txt  hbs_address.h  hbs_common.h  hbs_tree.c  hbs_tree.h  hbs_wots.c  hbs_wots.h
crypto/mceliece/: CMakeLists.txt
crypto/mceliece/incluce/: pqcp_err.h  pqcp_provider.h  pqcp_types.h
crypto/mceliece/include/: crypt_mceliece.h
crypto/mceliece/src/: mceliece.c  mceliece_controlbits.c  mceliece_decode.c  mceliece_enc_dec.c  mceliece_encode.c  mceliece_genpoly.c  mceliece_gf.c  mceliece_kem.c  mceliece_keygen.c  mceliece_local.h  mceliece_matrix_ops.c  mceliece_params.c  mceliece_poly.c  mceliece_vector.c
crypto/mceliece/test/: CMakeLists.txt  mceliece_demo.c
crypto/mldsa/: CMakeLists.txt
crypto/mldsa/include/: crypt_mldsa.h
crypto/mldsa/src/: asm_ml_dsa_ntt.c  asm_ml_dsa_poly.c  export_ml_dsa_armv8.c  export_ml_dsa_armv8.h  export_ml_dsa_c.c  ml_dsa.c  ml_dsa_core.c  ml_dsa_local.h  ml_dsa_ntt.c  ml_dsa_poly.c  ml_dsa_shake.h
crypto/modes/: CMakeLists.txt
crypto/modes/include/: crypt_modes.h  crypt_modes_aes_wrap.h  crypt_modes_cbc.h  crypt_modes_ccm.h  crypt_modes_cfb.h  crypt_modes_chacha20poly1305.h  crypt_modes_ctr.h  crypt_modes_ecb.h  crypt_modes_gcm.h  crypt_modes_gcm_siv.h  crypt_modes_hctr.h  crypt_modes_ofb.h  crypt_modes_xts.h  crypt_modes_zuc_gxm.h
crypto/modes/src/: asm_aes_cbc.c  asm_aes_ccm.h  asm_aes_cfb.c  asm_aes_ctr.c  asm_aes_ecb.c  asm_aes_xts.c  asm_sm4_cfb.c  asm_sm4_ecb.c  asm_sm4_gcm.c  asm_sm4_ofb_armv8.c  asm_sm4_ofb_x86_64.c  asm_sm4_setkey.c  asm_sm4_xts.c  ccm_core.h  ghash_core.h  modes.c  modes_aes_wrap.c  modes_cbc.c  modes_ccm.c  modes_cfb.c  modes_chacha20_poly1305.c  modes_ctr.c  modes_ecb.c  modes_gcm.c  modes_gcm_siv.c  modes_hctr.c  modes_local.h  modes_ofb.c  modes_xts.c  modes_zuc_gxm.c  noasm_aes_ccm.c  noasm_aes_ctr.c  noasm_aes_ecb.c  noasm_aes_xts.c  noasm_ghash.c  noasm_poly1305.c  noasm_sm4_ctr.c  noasm_sm4_ecb.c  noasm_sm4_hctr.c  noasm_sm4_xts.c  (+2 more)
crypto/util/: CMakeLists.txt  crypt_util.c  crypt_util_ctrl.c  crypt_util_mgf.c  crypt_util_pkey.c  crypt_util_rand.c  crypt_utils.c
pki/cms/: CMakeLists.txt
pki/cms/include/: hitls_cms_local.h  hitls_cms_recipient.h
pki/cms/src/: hitls_cms_authdata.c  hitls_cms_common.c  hitls_cms_envelopeddata.c  hitls_cms_pqc.c  hitls_cms_recipient.c  hitls_cms_signdata.c  hitls_cms_util.c  hitls_cms_util.h
pki/x509_common/: CMakeLists.txt
pki/x509_common/include/: hitls_x509_local.h
pki/x509_common/src/: hitls_x509_attrs.c  hitls_x509_common.c  hitls_x509_ctrl.c  hitls_x509_ext.c  hitls_x509_print.c  hitls_x509_util.c
testcode/: CMakeLists.txt
testcode/benchmark/: 25519_bench.c  CMakeLists.txt  benchmark.c  benchmark.h  benchmark_registry.h  cipher_bench.c  dh_bench.c  ecdh_bench.c  ecdsa_bench.c  frodokem_bench.c  mac_bench.c  mceliece_bench.c  md_bench.c  mldsa_bench.c  mlkem_bench.c  rsa_bench.c  slh_dsa_bench.c  sm2_bench.c  sm9_bench.c  xmss_bench.c
testcode/common/: execute_base.c  execute_test.c
testcode/demo/: CMakeLists.txt  aes_cfb.c  aes_ecb_demo.c  aes_xts.c  aescbc.c  bsl-uio.c  chacha20.c  client.c  drbg.c  ecdh.c  hash.c  otp.c  pbkdf2.c  privpass_token.c  rfc9150_client.c  rfc9150_server.c  sc-client.c  sc-server.c  server.c  sm2enc.c  sm2sign.c  sm4_ctr.c  sm4cbc.c  sm4xts.c  tlcp_client.c  tlcp_server.c  totp_demo.c  zuc_gxm.c
testcode/framework/common/: test_util.c
testcode/framework/crypto/: alg_check.c  crypto_test_util.c  crypto_test_util.h
testcode/framework/gen_test/: CMakeLists.txt  helper.c  main.c  test.c
testcode/framework/include/: helper.h  test.h
testcode/framework/process/: CMakeLists.txt  process.c
testcode/framework/stub/: stub_replace.h  stub_utils.h
testcode/framework/tls/: CMakeLists.txt
testcode/script/: all_mini_test.sh  build_hitls.sh  build_sdv.sh  execute_sdv.sh  feature_to_macro.json  mini_build_test.sh
testcode/script/mini_test_config/: ca_list_feature.cmake  hitls_nodfx_config.h  (+10 more)
testcode/sdv/: CMakeLists.txt  test_suite_sdv_custom_ext.c
testcode/test_config/: crypto_test_config.json  tls_test_config.json
testcode/testdata/: README.md
tls/cert/: CMakeLists.txt
tls/feature/: CMakeLists.txt
tls/handshake/: CMakeLists.txt
(+2951 files in other folders)
